# mdq

./: Cargo.toml  LICENSE  README.md  build.rs
docs/: architecture.md
src/: core.rs  db.rs  filter.pest  lib.rs  main.rs  manual.rs  markdown.rs  model.rs  pipeline.rs  query.rs  script.rs  semantic.rs  tokenize.rs
src/compat/: base.rs  dataview.rs  expr.pest  expr.rs  mod.rs  tasks.pest  tasks.rs
tests/: bases_compatibility.rs  compatibility.rs  tasks_compatibility.rs
