[package]
name = "mdq"
version = "0.1.0"
edition = "2024"
description = "A local-first search and retrieval CLI for Markdown collections"
license = "MIT"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
fastembed = { version = "5.16", default-features = false, features = ["hf-hub-rustls-tls", "ort-download-binaries-rustls-tls"] }
hex = "0.4"
percent-encoding = "2.3"
pest = "2.8"
pest_derive = "2.8"
pulldown-cmark = "0.13"
regex = "1.11"
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.20"
